# Synced-Parallel-Iterator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: iter_async.rs  lib.rs
