[package]
name = "par-iter-sync"
version = "0.1.4"
edition = "2018"
readme = "README.md"
license-file = "LICENSE.txt"
homepage = "https://github.com/Congyuwang/Synced-Parallel-Iterator"
repository = "https://github.com/Congyuwang/Synced-Parallel-Iterator"
keywords = ["parallelism", "iterator", "sequential", "synchronization", "concurrency"]
description = "Parallel Iterator With Sequential Output"

[lib]
name = "par_iter_sync"
crate-type = ["lib"]

[dependencies]
num_cpus = "^1.13"

[dev-dependencies]
log = "^0.4"
rayon = "^1.5"
indicatif = "^0.16"
